Fix edge distortion for the square

--- a/frontend/app.css
+++ b/frontend/app.css
@@ -2,8 +2,6 @@ canvas {
   padding: 0;
   margin: auto;
   display: block;
-  width: 600px;
-  height: 600px;
   position: absolute;
   top: 0;
   bottom: 0;
